--- a/pokinder-frontend/src/component/atom/Avatar/Avatar.module.css
+++ b/pokinder-frontend/src/component/atom/Avatar/Avatar.module.css
@@ -8,3 +8,10 @@
 
   cursor: pointer;
 }
+
+@media (max-width: 560px) {
+  .container {
+    width: var(--avatar-radius-mobile);
+    height: var(--avatar-radius-mobile);
+  }
+}
