--- a/pokinder-frontend/src/page/Admin/Admin.module.css
+++ b/pokinder-frontend/src/page/Admin/Admin.module.css
@@ -5,7 +5,6 @@
 }
 
 .table {
-  margin-top: 24px;
   border-collapse: collapse;
   width: 100%;
   table-layout: auto;
