--- a/pokinder-frontend/src/page/Proposals/Proposals.module.css
+++ b/pokinder-frontend/src/page/Proposals/Proposals.module.css
@@ -11,7 +11,6 @@
 }
 
 .table {
-  margin-top: 24px;
   border-collapse: collapse;
   width: 100%;
   table-layout: auto;
